# riscv_vm

./: '  .gitignore  .gitmodules  Cargo.toml  README.md  csrs  flake.nix  justfile  mmap_registers  rv64ui-p-add
.github/workflows/: rust.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/elf_load/: all.html  index.html  sidebar-items.js  struct.Address.html  (+2 more)
elf_load/: Cargo.toml
examples/: os.elf  os_vga.elf
meman/: Cargo.toml
riscv_vm/: Cargo.toml
riscv_vm/resources/: shader.wgsl
riscv_vm/src/: args.rs  hart.rs  lib.rs  main.rs  memory.rs  tests.rs  vmstate.rs
riscv_vm/src/decode/: compact.rs  instruction.rs  mod.rs  tests.rs
riscv_vm/src/devices/: async_device.rs  event_bus.rs  handled_device.rs  mod.rs  simple_uart.rs  vga_text_mode.rs
riscv_vm/src/execute/: mod.rs  rv32a.rs  rv32d.rs  rv32f.rs  rv32i.rs  rv32m.rs  rv64a.rs  rv64d.rs  rv64f.rs  rv64i.rs  rv64m.rs  rv64zicsr.rs
riscv_vm/src/gui/: mod.rs  modal.rs  vm_screen.rs
riscv_vm/src/hart/: counters.rs  csr_address.rs  csr_holder.rs  isa.rs  mod.rs  privilege.rs  registers.rs  tests.rs  trap.rs
riscv_vm/src/isa_tests/: mod.rs  util.rs
riscv_vm/src/memory/: address.rs  mem_map_device.rs  memory_buffer.rs  memory_map.rs  mod.rs  paging.rs  pmp.rs  registers.rs  tests.rs
riscv_vm/src/vm_tests/: custom.rs  isa.rs  mod.rs  util.rs
riscv_vm/src/vmstate/: builder.rs  mod.rs  swi_controller.rs  timer.rs
riscv_vm_macros/: Cargo.toml
src/: instruction.rs  lib.rs  main.rs  memory.rs  registers.rs  tests.rs
vm_tests/: README.md
(+217 files in other folders)
