[package]
name = "riscv_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf_load = { path = "../elf_load/" }
riscv_vm_macros = { path = "../riscv_vm_macros/" }
enumflags2 = "0.7.8"
pollster = {version = "0.3.0", optional = true}
wgpu = {version = "0.18.0", optional = true}
wgpu_text = {version = "0.8.5", optional = true}
winit = {version = "0.28", optional = true}

[features]
vga_text_buf = ["dep:pollster", "dep:wgpu", "dep:wgpu_text", "dep:winit"]
